# a2mytw

./: CMakeLists.txt  package.xml  setup.py
config/: team_config.yaml
launch/: rviz_moveit_gantry.launch  sample_environment.launch
script/: ariac_my_team_winner_node.py
src/: ariac_my_team_winner_node.cpp
src/ariac_my_team_winner/: ariac_my_team_winner.py
winner_team_submit_files/: build_team_system.bash  run_team_system.bash
