<?xml version="1.0"?>
<package format="2">
  <name>ariac_my_team_winner</name>
  <version>1.0.0</version>
  <description>ARIAC package for ARIAC 2020. Team Winner (Maxim Yastremsky).</description>
  <author email="maximyastremsky@gmail.com">Maxim Yastremsky</author>
  <maintainer email="maximyastremsky@gmail.com">Maxim Yastremsky</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nist_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
